force-app/main/default/objects/NRV10Calendar__c/NRV10Calendar__c.object-meta.xml
<CustomObject>
    <label>Calendrier de rémunération</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendriers de rémunération</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>