force-app/main/default/objects/NRV10Calendar__c/fields/commDate__c.field-meta.xml
<CustomField>
    <fullName>commDate__c</fullName>
    <description>Date de déclenchement du cliché. Utilisé par la tâche programmée pour passer les commissions en cliché et aboutir à leur versement.</description>
    <label>Date de commissionnement</label>
    <type>Date</type>
</CustomField>