force-app/main/default/objects/NRV10Calendar__c/fields/snapshotDate__c.field-meta.xml
<CustomField>
    <fullName>snapshotDate__c</fullName>
    <description>Date de cliché provenant de la migration de données -&gt; r10calen.cal_cal_deb
En fin de période des tests et validation de migration des données, à voir si ce champs est conservé.</description>
    <label>Date de cliché</label>
    <type>Date</type>
</CustomField>