force-app/main/default/objects/NRV10Calendar__c/fields/snapshotFor__c.field-meta.xml
<CustomField>
    <fullName>snapshotFor__c</fullName>
    <description>Fournit une représentation AAAA/MM de la période de couverture du cliché. Est également utilisé lors du cliché pour la sortie dans les fichiers nibelis et autres.</description>
    <formula>TEXT(YEAR(ADDMONTHS(commDate__c,-1))) + &apos;/&apos; + TEXT(MONTH(ADDMONTHS(commDate__c,-1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Période de cliché</label>
    <type>Text</type>
</CustomField>