force-app/main/default/objects/NRV10Calendar__c/validationRules/VR_K3_NRV10Calendar_DateCommissionnement.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_NRV10Calendar_DateCommissionnement</fullName>
    <active>true</active>
    <description>Varifie que la date de commissionnement est renseignée</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, ISBLANK(commDate__c))</errorConditionFormula>
    <errorDisplayField>commDate__c</errorDisplayField>
    <errorMessage>La date de commissionnement doit être renseignée.</errorMessage>
</ValidationRule>