force-app/main/default/objects/NRV10Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>snapshotFor__c</columns>
    <columns>commDate__c</columns>
    <columns>snapshotDate__c</columns>
    <columns>legacyReference__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>